--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>fr.maugern</groupId>
-	<artifactId>jBCryptAttack</artifactId>
+	<artifactId>QRcode-factory</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>QRcode Factory</name>
 
-	<url>https://github.com/maugern/jBCryptAttck</url>
-	<description>Hébergement de services dynamiquement créés par les utilisateurs et distribués par l’intermédiaire de QR-codes.</description>
+	<url>https://github.com/maugern/QRcode-factory</url>
+	<description>Short link generator distributed by QRcode</description>
 
 	<developers>
 		<developer>
@@ -28,17 +28,33 @@
 	</licenses>
 
 	<properties>
-		<spring.version>4.2.0.RELEASE</spring.version>
-		<spring-security.version>4.0.2.RELEASE</spring-security.version>
-		<spring-data-jpa.version>1.8.2.RELEASE</spring-data-jpa.version>
-		<hibernate.version>4.3.11.Final</hibernate.version>
-		<hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
-		<commons-dbcp.version>1.4</commons-dbcp.version>
-		<jstl.version>1.2</jstl.version>
-		<junit.version>4.12</junit.version>
-		<logback.version>1.1.3</logback.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+
+		<jetty-maven.version>9.2.11.v20150529</jetty-maven.version>
+		<maven-war-plugin.version>3.1.0</maven-war-plugin.version>
+
+		<spring.version>4.3.11.RELEASE</spring.version>
+		<spring-security.version>4.2.3.RELEASE</spring-security.version>
+		<spring-data-jpa.version>1.11.7.RELEASE</spring-data-jpa.version>
+
+		<junit.version>4.12</junit.version>
+
+		<postgresql-jdbc.version>42.1.4</postgresql-jdbc.version>
+		<hsql.version>2.2.8</hsql.version>
+
+		<hibernate.version>4.3.11.Final</hibernate.version>
+		<hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
+
+		<jstl.version>1.3</jstl.version>
+		<javax-el.version>2.2.4</javax-el.version>
+		<jsp-api.version>2.0</jsp-api.version>
+		<jsp-servlet.version>3.0.1</jsp-servlet.version>
+
+		<commons-dbcp.version>1.4</commons-dbcp.version>
+		<logback.version>1.1.3</logback.version>
+		<hashid.version>1.0.3</hashid.version>
+		<zxing.version>3.3.0</zxing.version>
 	</properties>
 
 	<dependencies>
@@ -94,20 +110,20 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.1.4</version>
+			<version>${postgresql-jdbc.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.2.8</version>
+			<version>${hsql.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.el</groupId>
 			<artifactId>javax.el-api</artifactId>
-			<version>2.2.4</version>
+			<version>${javax-el.version}</version>
 		</dependency>
 
 		<dependency>
@@ -125,14 +141,14 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jsp-api</artifactId>
-			<version>2.0</version>
+			<version>${jsp-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
-			<version>3.0.1</version>
+			<version>${jsp-servlet.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -149,30 +165,21 @@
 			<version>${logback.version}</version>
 		</dependency>
 
-		<!-- Hashids, to create small URL hash -->
 		<dependency>
 			<groupId>org.hashids</groupId>
 			<artifactId>hashids</artifactId>
-			<version>1.0.2</version>
+			<version>${hashid.version}</version>
 		</dependency>
 
-		<!-- Guava ultimate lib -->
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>23.0</version>
-		</dependency>
-
-		<!-- zxing, to generate QR-code -->
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>core</artifactId>
-			<version>3.3.0</version>
+			<version>${zxing.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.google.zxing</groupId>
 			<artifactId>javase</artifactId>
-			<version>3.3.0</version>
+			<version>${zxing.version}</version>
 		</dependency>
 
 	</dependencies>
@@ -181,12 +188,20 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.2.11.v20150529</version>
+				<version>${jetty-maven.version}</version>
 				<configuration>
 					<scanIntervalSeconds>5</scanIntervalSeconds>
 					<webApp>
 						<contextPath>/</contextPath>
 					</webApp>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>${maven-war-plugin.version}</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
 		</plugins>
