--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: java
 jdk:
   - oraclejdk8
+sudo: false
+
 install: mvn install -DskipTests=false
-script:
-    - mvn compile
+script: mvn cobertura:cobertura
+
+after_success:
+- bash <(curl -s https://codecov.io/bash)
