--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<hibernate.version>4.3.11.Final</hibernate.version>
 		<hibernate-validator.version>5.2.1.Final</hibernate-validator.version>
 
-		<jstl.version>1.3</jstl.version>
+		<jstl.version>1.2</jstl.version>
 		<javax-el.version>2.2.4</javax-el.version>
 		<jsp-api.version>2.0</jsp-api.version>
 		<jsp-servlet.version>3.0.1</jsp-servlet.version>
@@ -55,6 +55,8 @@
 		<logback.version>1.1.3</logback.version>
 		<hashid.version>1.0.3</hashid.version>
 		<zxing.version>3.3.0</zxing.version>
+		
+		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
 	</properties>
 
 	<dependencies>
@@ -202,6 +204,18 @@
 				<version>${maven-war-plugin.version}</version>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>${cobertura-maven-plugin.version}</version>
+				<configuration>
+					<formats>
+						<format>html</format>
+						<format>xml</format>
+					</formats>
+					<check />
 				</configuration>
 			</plugin>
 		</plugins>
