resolve some sonarqube/codeclimate issues

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,7 +1,7 @@
 NotEmpty=Required field
 Size.userForm.username=Please use between 6 and 32 characters
-Duplicate.userForm.username=Someone already has that username
+Duplicate.userForm.username=Someone already has this username
 Size.userForm.password=Try one with at least 8 characters
-Diff.userForm.passwordConfirm=These passwords don't match
-Form.qrcodeForm.url=Your link doesnt look like a stantard URL
+Diff.userForm.passwordConfirm=These passwords does not match
+Form.qrcodeForm.url=Your link do not look like a stantard URL
 Size.qrcodeForm.url=4000 charachters max
